@@ -33,7 +33,7 @@ The format of each table entry is as follows:
 
 -cosas para la version 5.1
 
--condicion-snapshot
+-quiza redibujar archivo logo tal cual con el boot logo
 
 -Disassemble a txt
 
