@@ -11,6 +11,7 @@ Added menu to find and set lives in games
 Added menu to view color palettes
 Added actions commands to breakpoints, so you can run some actions when a breakpoint is fired
 Added up to three AY Chips
+Added quicksave function
 Added emulation of other DAC chips appart from Specdrum: Covox, etc
 Added setting to set 256kb or 512kb on Spectrum 128k machines
 Added setting to set F keys (F1, F2, etc) to run different actions: reset, nmi, exit emulator, etc
